# embedded-iot-controller

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  README.md  build.cmd  flash.cmd  nucleo_f767_base.ioc
Arduino/CAN_ESP32_Slave/: CAN_ESP32_Slave.ino
Arduino/I2C_ESP32_Slave/: I2C_ESP32_Slave.ino
Inc/: app_helpers.h  app_net.h  app_platform.h  app_spi.h  can.h  dma.h  eth.h  ethernetif.h  gpio.h  i2c.h  lwip.h  lwipopts.h  main.h  spi.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tft.h  usart.h  usb_device.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h
Raspi/: laravel.sh
Src/: app_helpers.c  app_net.c  app_platform.c  app_spi.c  can.c  dma.c  eth.c  ethernetif.c  gpio.c  i2c.c  lwip.c  main.c  spi.c  stm32f7xx_it.c  tft.c  usart.c  usbd_cdc_if.c  usbd_conf.c
cmake/: arm-none-eabi.cmake
